# gemini-youtube-transcriber-mcp

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/youtube_transcriber/: __init__.py  cli.py  server.py  transcriber.py
